--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -799,7 +799,7 @@ a {
   color: #9b96e3;
 }
 .cid-uW8s9CuNti .mbr-section-subtitle {
-  color: #ffa600;
+  color: #000000;
 }
 .cid-uW8s3BIlcq {
   padding-top: 15px;
