--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -778,130 +778,28 @@ a {
     padding-right: 16px;
   }
 }
-.cid-uWv0C3GlsP {
+.cid-uWuVDLttyN {
   padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #ffffff;
+  padding-bottom: 0rem;
+  background-image: url("../../../assets/images/captura20de20pantalla202025-09-1120a20las2017.28.11-1508x393.png");
 }
-@media (min-width: 992px) {
-  .cid-uWv0C3GlsP .carousel {
-    max-height: 200px;
-  }
-  .cid-uWv0C3GlsP .carousel img {
-    height: 200px;
-    object-fit: cover;
-  }
+.cid-uWuVDLttyN .mbr-fallback-image.disabled {
+  display: none;
 }
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-uWv0C3GlsP .carousel {
-    min-height: 130px;
-  }
-  .cid-uWv0C3GlsP .carousel img {
-    height: 130px;
-    object-fit: cover;
-  }
-}
-@media (max-width: 767px) {
-  .cid-uWv0C3GlsP .carousel {
-    min-height: 110px;
-  }
-  .cid-uWv0C3GlsP .carousel img {
-    height: 110px;
-    object-fit: cover;
-  }
-  .cid-uWv0C3GlsP .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-uWv0C3GlsP .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-uWv0C3GlsP .carousel,
-.cid-uWv0C3GlsP .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-uWv0C3GlsP .item-wrapper {
-  width: 100%;
-}
-.cid-uWv0C3GlsP .item-menu-overlay {
-  border-radius: 2rem;
-}
-.cid-uWv0C3GlsP .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-uWv0C3GlsP .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-uWv0C3GlsP .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-uWv0C3GlsP .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-uWv0C3GlsP .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-uWv0C3GlsP .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-uWv0C3GlsP .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-uWv0C3GlsP .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-uWv0C3GlsP .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-uWv0C3GlsP .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-uWv0C3GlsP .carousel-indicators li.active,
-.cid-uWv0C3GlsP .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-uWv0C3GlsP .carousel-indicators li::after,
-.cid-uWv0C3GlsP .carousel-indicators li::before {
-  content: none;
-}
-.cid-uWv0C3GlsP .carousel-indicators.ie-fix {
-  left: 50%;
+.cid-uWuVDLttyN .mbr-fallback-image {
   display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
-@media (max-width: 768px) {
-  .cid-uWv0C3GlsP .carousel-indicators {
-    display: none !important;
-  }
+.cid-uWuVDLttyN .mbr-section-title {
+  color: #ffffff;
+}
+.cid-uWuVDLttyN .mbr-section-subtitle {
+  color: #ffffff;
 }
 .cid-uW8s3BIlcq {
   padding-top: 15px;
@@ -1129,29 +1027,6 @@ a {
 }
 .cid-uW8s3BIlcq #simp ul::-webkit-scrollbar-thumb {
   background-color: #73797f;
-}
-.cid-uWuVDLttyN {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-uWuVDLttyN .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-uWuVDLttyN .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-uWuVDLttyN .mbr-section-title {
-  color: #9b96e3;
-}
-.cid-uWuVDLttyN .mbr-section-subtitle {
-  color: #000000;
 }
 .cid-uW8s6rHiIN {
   padding-top: 3rem;
