--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -778,15 +778,15 @@ a {
     padding-right: 16px;
   }
 }
-.cid-uWuVDLttyN {
+.cid-uWvlt0iXVw {
   padding-top: 1rem;
   padding-bottom: 0rem;
   background-image: url("../../../assets/images/captura20de20pantalla202025-09-1120a20las2017.28.11-1508x393.png");
 }
-.cid-uWuVDLttyN .mbr-fallback-image.disabled {
+.cid-uWvlt0iXVw .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-uWuVDLttyN .mbr-fallback-image {
+.cid-uWvlt0iXVw .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -795,10 +795,10 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-uWuVDLttyN .mbr-section-title {
+.cid-uWvlt0iXVw .mbr-section-title {
   color: #ffffff;
 }
-.cid-uWuVDLttyN .mbr-section-subtitle {
+.cid-uWvlt0iXVw .mbr-section-subtitle {
   color: #ffffff;
 }
 .cid-uW8s3BIlcq {
