--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -599,12 +599,6 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 .alert-danger {
   background-color: #ffea64;
 }
-.mbr-section-btn .btn:not(.btn-form) {
-  border-radius: 100px;
-}
-.mbr-gallery-filter li a {
-  border-radius: 100px !important;
-}
 .mbr-gallery-filter li.active .btn {
   background-color: #9b96e3;
   border-color: #9b96e3;
@@ -612,9 +606,6 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
-}
-.nav-tabs .nav-link {
-  border-radius: 100px !important;
 }
 a,
 a:hover {
@@ -641,15 +632,14 @@ a:hover {
   color: #ffffff;
 }
 /* Scroll to top button*/
-#scrollToTop a {
-  border-radius: 100px;
+.scrollToTop_wraper {
+  display: none;
 }
 .form-control {
   font-family: 'Inter Tight', sans-serif;
   font-size: 1.4rem;
   line-height: 1.3;
   font-weight: 400;
-  border-radius: 40px !important;
 }
 .form-control > .mbr-iconfont {
   font-size: 1.75rem;
@@ -672,19 +662,6 @@ blockquote {
   border-color: #9b96e3;
 }
 /* Forms */
-.mbr-form .input-group-btn .btn {
-  border-radius: 100px !important;
-}
-.mbr-form .input-group-btn .btn:hover {
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-}
-.mbr-form .input-group-btn button[type="submit"] {
-  border-radius: 100px !important;
-  padding: 1rem 3rem;
-}
-.mbr-form .input-group-btn button[type="submit"]:hover {
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-}
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
   background-color: #9b96e3;
@@ -1052,9 +1029,302 @@ a {
 .cid-uW8s6rHiIN .content-head {
   max-width: 800px;
 }
-.cid-uW8rYRUQjD {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.cid-uWvFwj3L6q {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
   background-color: #000000;
-  overflow: hidden;
+}
+.cid-uWvFwj3L6q .social-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.cid-uWvFwj3L6q .social-row .soc-item {
+  margin: 8px;
+}
+.cid-uWvFwj3L6q .social-row .soc-item a:hover .mbr-iconfont,
+.cid-uWvFwj3L6q .social-row .soc-item a:focus .mbr-iconfont {
+  background-color: #ffffff;
+}
+.cid-uWvFwj3L6q .social-row .soc-item a .mbr-iconfont {
+  width: 72px;
+  height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  font-size: 32px;
+  background-color: #edefeb;
+  color: #163300;
+  transition: all 0.3s ease-in-out;
+}
+.cid-uWvFwj3L6q .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-uWvFwj3L6q .header-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-uWvFwj3L6q .header-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-uWvFwj3L6q .header-menu li p {
+  margin: 0;
+}
+.cid-uWvFwj3L6q .copyright {
+  margin-bottom: 0;
+  color: #ffffff;
+  text-align: center;
+}
+.cid-uWvFwj3L6q .mbr-section-title {
+  color: #ffffff;
+}
+.cid-uWvyFVXxA3 {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-image: url("../../../assets/images/captura20de20pantalla202025-09-1120a20las2017.28.11-1508x393.png");
+}
+.cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uWvyFVXxA3 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uWvyFVXxA3 .mbr-section-title {
+  color: #ffffff;
+}
+.cid-uWvyFVXxA3 .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-uWvz7IV0XF {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #edefeb;
+}
+.cid-uWvz7IV0XF .mbr-media {
+  position: relative;
+}
+.cid-uWvz7IV0XF .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-uWvz7IV0XF a:hover {
+  background-image: none !important;
+}
+.cid-uWvz7IV0XF .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.cid-uWvz7IV0XF .mbr-media span {
+  font-size: 5rem;
+  transition: all 0.2s;
+}
+.cid-uWvz7IV0XF .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-uWvz7IV0XF .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-uWvz7IV0XF .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-uWvz7IV0XF .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uWvz7IV0XF .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uWvz7IV0XF .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uWvz7IV0XF .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uWvz7IV0XF .content-head {
+  max-width: 800px;
+}
+.cid-uWvGvSzNM8 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #edefeb;
+}
+.cid-uWvGvSzNM8 .mbr-media {
+  position: relative;
+}
+.cid-uWvGvSzNM8 .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-uWvGvSzNM8 a:hover {
+  background-image: none !important;
+}
+.cid-uWvGvSzNM8 .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.cid-uWvGvSzNM8 .mbr-media span {
+  font-size: 5rem;
+  transition: all 0.2s;
+}
+.cid-uWvGvSzNM8 .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-uWvGvSzNM8 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-uWvGvSzNM8 .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-uWvGvSzNM8 .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uWvGvSzNM8 .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uWvGvSzNM8 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uWvGvSzNM8 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uWvGvSzNM8 .content-head {
+  max-width: 800px;
+}
+.cid-uWvFwj3L6q {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  background-color: #000000;
+}
+.cid-uWvFwj3L6q .social-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.cid-uWvFwj3L6q .social-row .soc-item {
+  margin: 8px;
+}
+.cid-uWvFwj3L6q .social-row .soc-item a:hover .mbr-iconfont,
+.cid-uWvFwj3L6q .social-row .soc-item a:focus .mbr-iconfont {
+  background-color: #ffffff;
+}
+.cid-uWvFwj3L6q .social-row .soc-item a .mbr-iconfont {
+  width: 72px;
+  height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  font-size: 32px;
+  background-color: #edefeb;
+  color: #163300;
+  transition: all 0.3s ease-in-out;
+}
+.cid-uWvFwj3L6q .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-uWvFwj3L6q .header-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-uWvFwj3L6q .header-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-uWvFwj3L6q .header-menu li p {
+  margin: 0;
+}
+.cid-uWvFwj3L6q .copyright {
+  margin-bottom: 0;
+  color: #ffffff;
+  text-align: center;
+}
+.cid-uWvFwj3L6q .mbr-section-title {
+  color: #ffffff;
 }
