--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -776,7 +776,7 @@ a {
 .cid-uWvlt0iXVw {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-image: url("../../../assets/images/captura20de20pantalla202025-09-1120a20las2017.28.11-1508x393.png");
+  background-image: url("../../../assets/images/111-1508x393.jpg");
 }
 .cid-uWvlt0iXVw .mbr-fallback-image.disabled {
   display: none;
@@ -1107,7 +1107,7 @@ a {
 .cid-uWvyFVXxA3 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-image: url("../../../assets/images/captura20de20pantalla202025-09-1120a20las2017.28.11-1508x393.png");
+  background-image: url("../../../assets/images/111-1508x393.jpg");
 }
 .cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
   display: none;
@@ -1129,6 +1129,88 @@ a {
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle P {
   text-align: center;
+}
+.cid-uWvGvSzNM8 {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #edefeb;
+}
+.cid-uWvGvSzNM8 .mbr-media {
+  position: relative;
+}
+.cid-uWvGvSzNM8 .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-uWvGvSzNM8 a:hover {
+  background-image: none !important;
+}
+.cid-uWvGvSzNM8 .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.cid-uWvGvSzNM8 .mbr-media span {
+  font-size: 5rem;
+  transition: all 0.2s;
+}
+.cid-uWvGvSzNM8 .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-uWvGvSzNM8 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-uWvGvSzNM8 .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-uWvGvSzNM8 .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uWvGvSzNM8 .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uWvGvSzNM8 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uWvGvSzNM8 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uWvGvSzNM8 .content-head {
+  max-width: 800px;
 }
 .cid-uWvz7IV0XF {
   padding-top: 0rem;
@@ -1212,32 +1294,32 @@ a {
 .cid-uWvz7IV0XF .content-head {
   max-width: 800px;
 }
-.cid-uWvGvSzNM8 {
+.cid-uWvTBnxmlr {
   padding-top: 0rem;
   padding-bottom: 5rem;
   background-color: #edefeb;
 }
-.cid-uWvGvSzNM8 .mbr-media {
+.cid-uWvTBnxmlr .mbr-media {
   position: relative;
 }
-.cid-uWvGvSzNM8 .mbr-media img {
+.cid-uWvTBnxmlr .mbr-media img {
   width: 100%;
   object-fit: cover;
 }
-.cid-uWvGvSzNM8 a:hover {
+.cid-uWvTBnxmlr a:hover {
   background-image: none !important;
 }
-.cid-uWvGvSzNM8 .icon-wrap {
+.cid-uWvTBnxmlr .icon-wrap {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
 }
-.cid-uWvGvSzNM8 .mbr-media span {
+.cid-uWvTBnxmlr .mbr-media span {
   font-size: 5rem;
   transition: all 0.2s;
 }
-.cid-uWvGvSzNM8 .modalWindow {
+.cid-uWvTBnxmlr .modalWindow {
   position: fixed;
   z-index: 5000;
   left: 0;
@@ -1246,16 +1328,16 @@ a {
   width: 100%;
   height: 100%;
 }
-.cid-uWvGvSzNM8 .modalWindow .modalWindow-container {
+.cid-uWvTBnxmlr .modalWindow .modalWindow-container {
   display: table-cell;
   vertical-align: middle;
 }
-.cid-uWvGvSzNM8 .modalWindow .modalWindow-video {
+.cid-uWvTBnxmlr .modalWindow .modalWindow-video {
   height: calc(44.9943757vw);
   width: 80vw;
   margin: 0 auto;
 }
-.cid-uWvGvSzNM8 .close {
+.cid-uWvTBnxmlr .close {
   position: fixed;
   opacity: 0.5;
   font-size: 1.5rem;
@@ -1274,15 +1356,15 @@ a {
   justify-content: center;
   display: flex;
 }
-.cid-uWvGvSzNM8 .close:hover {
+.cid-uWvTBnxmlr .close:hover {
   opacity: 1;
   background: #000;
   color: #fff;
 }
-.cid-uWvGvSzNM8 .mbr-fallback-image.disabled {
+.cid-uWvTBnxmlr .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-uWvGvSzNM8 .mbr-fallback-image {
+.cid-uWvTBnxmlr .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1291,7 +1373,89 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-uWvGvSzNM8 .content-head {
+.cid-uWvTBnxmlr .content-head {
+  max-width: 800px;
+}
+.cid-uWvUZcZuh4 {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #edefeb;
+}
+.cid-uWvUZcZuh4 .mbr-media {
+  position: relative;
+}
+.cid-uWvUZcZuh4 .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-uWvUZcZuh4 a:hover {
+  background-image: none !important;
+}
+.cid-uWvUZcZuh4 .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.cid-uWvUZcZuh4 .mbr-media span {
+  font-size: 5rem;
+  transition: all 0.2s;
+}
+.cid-uWvUZcZuh4 .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-uWvUZcZuh4 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-uWvUZcZuh4 .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-uWvUZcZuh4 .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uWvUZcZuh4 .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uWvUZcZuh4 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uWvUZcZuh4 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uWvUZcZuh4 .content-head {
   max-width: 800px;
 }
 .cid-uWvFwj3L6q {
