--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -776,7 +776,7 @@ a {
 .cid-uWvlt0iXVw {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #ffffff;
+  background-color: #f5f5ff;
 }
 .cid-uWvlt0iXVw .mbr-fallback-image.disabled {
   display: none;
@@ -1025,8 +1025,8 @@ a {
   background-color: #73797f;
 }
 .cid-uW8s6rHiIN {
-  padding-top: 3rem;
-  padding-bottom: 6rem;
+  padding-top: 1rem;
+  padding-bottom: 4rem;
   background-color: #edefeb;
 }
 .cid-uW8s6rHiIN .mbr-overlay {
@@ -1107,7 +1107,7 @@ a {
 .cid-uWvyFVXxA3 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #ffffff;
+  background-color: #f5f5ff;
 }
 .cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
   display: none;
@@ -1133,7 +1133,7 @@ a {
 .cid-uWvGvSzNM8 {
   padding-top: 0rem;
   padding-bottom: 1rem;
-  background-color: #edefeb;
+  background-color: #ffffff;
 }
 .cid-uWvGvSzNM8 .mbr-media {
   position: relative;
@@ -1215,7 +1215,7 @@ a {
 .cid-uWvTBnxmlr {
   padding-top: 0rem;
   padding-bottom: 1rem;
-  background-color: #edefeb;
+  background-color: #ffffff;
 }
 .cid-uWvTBnxmlr .mbr-media {
   position: relative;
@@ -1297,7 +1297,7 @@ a {
 .cid-uWvz7IV0XF {
   padding-top: 0rem;
   padding-bottom: 1rem;
-  background-color: #edefeb;
+  background-color: #ffffff;
 }
 .cid-uWvz7IV0XF .mbr-media {
   position: relative;
@@ -1379,7 +1379,7 @@ a {
 .cid-uWvUZcZuh4 {
   padding-top: 0rem;
   padding-bottom: 3rem;
-  background-color: #edefeb;
+  background-color: #ffffff;
 }
 .cid-uWvUZcZuh4 .mbr-media {
   position: relative;
