--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -776,7 +776,7 @@ a {
 .cid-uWvlt0iXVw {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #f5f5ff;
+  background-color: #4a3fca;
 }
 .cid-uWvlt0iXVw .mbr-fallback-image.disabled {
   display: none;
@@ -791,10 +791,10 @@ a {
   top: 0;
 }
 .cid-uWvlt0iXVw .mbr-section-title {
-  color: #9b96e3;
+  color: #ffffff;
 }
 .cid-uWvlt0iXVw .mbr-section-subtitle {
-  color: #000000;
+  color: #ffffff;
   text-align: center;
 }
 .cid-uW8s3BIlcq {
@@ -1107,7 +1107,7 @@ a {
 .cid-uWvyFVXxA3 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #f5f5ff;
+  background-color: #4a3fca;
 }
 .cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
   display: none;
@@ -1122,10 +1122,10 @@ a {
   top: 0;
 }
 .cid-uWvyFVXxA3 .mbr-section-title {
-  color: #9b96e3;
+  color: #f5f5ff;
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle P {
   text-align: center;
