--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -773,15 +773,15 @@ a {
     padding-right: 16px;
   }
 }
-.cid-uWvlt0iXVw {
+.cid-uWwcJIvU7C {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #4a3fca;
+  background-color: #9b96e3;
 }
-.cid-uWvlt0iXVw .mbr-fallback-image.disabled {
+.cid-uWwcJIvU7C .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-uWvlt0iXVw .mbr-fallback-image {
+.cid-uWwcJIvU7C .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -790,16 +790,16 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-uWvlt0iXVw .mbr-section-title {
+.cid-uWwcJIvU7C .mbr-section-title {
   color: #ffffff;
 }
-.cid-uWvlt0iXVw .mbr-section-subtitle {
+.cid-uWwcJIvU7C .mbr-section-subtitle {
   color: #ffffff;
   text-align: center;
 }
 .cid-uW8s3BIlcq {
-  padding-top: 15px;
-  padding-bottom: 75px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-uW8s3BIlcq #simp button,
@@ -1107,7 +1107,7 @@ a {
 .cid-uWvyFVXxA3 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #4a3fca;
+  background-color: #9b96e3;
 }
 .cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
   display: none;
@@ -1122,7 +1122,7 @@ a {
   top: 0;
 }
 .cid-uWvyFVXxA3 .mbr-section-title {
-  color: #f5f5ff;
+  color: #ffffff;
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle {
   color: #ffffff;
