--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -776,7 +776,7 @@ a {
 .cid-uWwcJIvU7C {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #9b96e3;
+  background-color: #4a3fca;
 }
 .cid-uWwcJIvU7C .mbr-fallback-image.disabled {
   display: none;
@@ -859,7 +859,7 @@ a {
   cursor: initial;
 }
 .cid-uW8s3BIlcq #simp .simp-controls button:not([disabled]):hover {
-  background: #4082bc;
+  background: #4a3fca;
   color: #fff;
 }
 .cid-uW8s3BIlcq #simp .simp-controls .simp-prev,
@@ -1006,7 +1006,7 @@ a {
   background: #242f3d;
 }
 .cid-uW8s3BIlcq #simp ul li.simp-active {
-  background: #4082bc;
+  background: #4a3fca;
   color: #fff;
 }
 .cid-uW8s3BIlcq #simp ul li .simp-desc {
