--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1107,7 +1107,7 @@ a {
 .cid-uWvyFVXxA3 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #9b96e3;
+  background-color: #4a3fca;
 }
 .cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
   display: none;
