--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1460,57 +1460,57 @@ a {
 .cid-uWvUZcZuh4 .content-head {
   max-width: 800px;
 }
-.cid-uWHQUJ2eWy {
+.cid-uWHTpoKEqG {
   padding-top: 2rem;
   padding-bottom: 0rem;
-  background-color: #f7f7f7;
+  background-color: #edefeb;
 }
-.cid-uWHQUJ2eWy h6 {
+.cid-uWHTpoKEqG h6 {
   line-height: 1.2;
 }
-.cid-uWHQUJ2eWy img,
-.cid-uWHQUJ2eWy .item-img {
+.cid-uWHTpoKEqG img,
+.cid-uWHTpoKEqG .item-img {
   width: 100%;
   height: 100%;
 }
-.cid-uWHQUJ2eWy .item:focus,
-.cid-uWHQUJ2eWy span:focus {
+.cid-uWHTpoKEqG .item:focus,
+.cid-uWHTpoKEqG span:focus {
   outline: none;
 }
-.cid-uWHQUJ2eWy .item-wrapper {
+.cid-uWHTpoKEqG .item-wrapper {
   position: relative;
   display: flex;
   flex-flow: column nowrap;
   margin-bottom: 2rem;
 }
-.cid-uWHQUJ2eWy .mbr-section-btn {
+.cid-uWHTpoKEqG .mbr-section-btn {
   margin-top: auto !important;
   text-align: center;
 }
-.cid-uWHQUJ2eWy .mbr-section-title {
+.cid-uWHTpoKEqG .mbr-section-title {
   color: #000000;
 }
-.cid-uWHQUJ2eWy .mbr-text,
-.cid-uWHQUJ2eWy .mbr-section-btn {
+.cid-uWHTpoKEqG .mbr-text,
+.cid-uWHTpoKEqG .mbr-section-btn {
   color: #000000;
 }
-.cid-uWHQUJ2eWy .item-title {
-  color: #000000;
-  text-align: center;
-}
-.cid-uWHQUJ2eWy .item-subtitle {
+.cid-uWHTpoKEqG .item-title {
   color: #000000;
   text-align: center;
 }
-.cid-uWHQUJ2eWy .item-text {
+.cid-uWHTpoKEqG .item-subtitle {
   color: #000000;
   text-align: center;
 }
-.cid-uWHQUJ2eWy .content-head {
+.cid-uWHTpoKEqG .item-text {
+  color: #000000;
+  text-align: center;
+}
+.cid-uWHTpoKEqG .content-head {
   max-width: 800px;
 }
 @media (max-width: 767px) {
-  .cid-uWHQUJ2eWy .item-wrapper {
+  .cid-uWHTpoKEqG .item-wrapper {
     margin-bottom: 1rem;
   }
 }
