--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -800,7 +800,7 @@ a {
   color: #ffffff;
 }
 .cid-uWx9fzitW8 .mbr-section-subtitle {
-  color: #ffa600;
+  color: #ffffff;
 }
 .cid-uWx9fzitW8 .mbr-section-subtitle P {
   text-align: center;
