--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -782,7 +782,7 @@ a {
 .cid-uWx9fzitW8 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #232323;
+  background-color: #17212b;
 }
 .cid-uWx9fzitW8 .mbr-fallback-image.disabled {
   display: none;
@@ -1056,10 +1056,13 @@ a {
 .cid-uWx7AsDfu4 .content-head {
   max-width: 800px;
 }
+.cid-uWx7AsDfu4 .mbr-section-title {
+  color: #17212b;
+}
 .cid-uWvFwj3L6q {
   padding-top: 0rem;
   padding-bottom: 1rem;
-  background-color: #000000;
+  background-color: #17212b;
 }
 .cid-uWvFwj3L6q .social-row {
   display: flex;
@@ -1115,7 +1118,7 @@ a {
 .cid-uWvyFVXxA3 {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #4a3fca;
+  background-color: #17212b;
 }
 .cid-uWvyFVXxA3 .mbr-fallback-image.disabled {
   display: none;
@@ -1133,7 +1136,7 @@ a {
   color: #ffffff;
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle {
-  color: #ffffff;
+  color: #9d9d9d;
 }
 .cid-uWvyFVXxA3 .mbr-section-subtitle P {
   text-align: center;
@@ -1166,7 +1169,7 @@ a {
   text-align: center;
 }
 .cid-uWHTpoKEqG .mbr-section-title {
-  color: #000000;
+  color: #17212b;
 }
 .cid-uWHTpoKEqG .mbr-text,
 .cid-uWHTpoKEqG .mbr-section-btn {
@@ -1195,7 +1198,7 @@ a {
 .cid-uWvFwj3L6q {
   padding-top: 0rem;
   padding-bottom: 1rem;
-  background-color: #000000;
+  background-color: #17212b;
 }
 .cid-uWvFwj3L6q .social-row {
   display: flex;
