--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1198,7 +1198,7 @@ a {
 .cid-uWvFwj3L6q {
   padding-top: 0rem;
   padding-bottom: 1rem;
-  background-color: #17212b;
+  background-color: #2f3841;
 }
 .cid-uWvFwj3L6q .social-row {
   display: flex;
